优化：重写视图是否可见逻辑;